[package]
name = "kasu"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
paste = "1.0.15"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] } # wss
