[package]
name = "kasu"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
paste = "1.0.15"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32" # wss
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-retry = "0.3.2"
async-lock = "3.4.2"
serde-env = "0.3.0"
slack-morphism = "2.22.0"
urlencoding = "2.1.3"
chrono = "0.4.45"
